# selections

./: .gitignore  README.md  package.yaml  selectable.cabal  selections.cabal  stack.yaml
src/Control/Lens/: Selection.hs
src/Data/Functor/: Selectable.hs  Selection.hs
src/Examples/: Accounts.lhs  Lens.lhs
tutorials/: Basic.lhs  Basic.md  Lenses.lhs  Lenses.md
