name:                selections
version:             0.1.0.2
synopsis:            Combinators for operating with selections over an underlying functor
-- description:
homepage:            https://github.com/ChrisPenner/selections#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2017 Chris Penner
category:            Data Structures, Functors
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Functor.Selection
  build-depends:       base >= 4.7 && < 5
                     , comonad
                     , bifunctors
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/selections
